# gen-ai-roadmap

./: .env.example  .gitignore  LICENSE  README.md  SETUP.md  genai-roadmap.md  requirements.txt  setup.bat  setup.sh  test_output.txt  update_roadmap.py
.cursor/: mcp.json
dashboard/: app.py  com.gautam.genai-roadmap-dashboard.plist  dashboard.html
docs/: index-aether-upgrade.html  index.html  project-learning-workflow.md  setup.md  zenith-advanced-curriculum.html  zenith-master-dashboard.html
local-agent/: IMPLEMENTATION_PLAN.md  LOCAL_AGENT_DEMO.md  mcp_server.py  test_mcp.py
projects/dashboard/: app.py  dashboard.html  install_launch_agent.sh  start_dashboard.command
projects/local-agent/: PROMPT_TEMPLATES.md  README.md  ensure_local_model.sh  local_agent_demo.py  mcp_server.py  report_token_savings.py  roadmap-progress.example.json  roadmap_coach.py  run_checks.bat  run_checks.sh  start_local_agent.bat  start_local_agent.sh  test_mcp.py  test_roadmap_agent.py
projects/local-agent/data/: TOKEN_SAVINGS_TRACKER.csv
projects/local-agent/docs/: LOCAL_AGENT_DEMO.md  implementation-plan.md  local-agent-demo.md  prompt-templates.md
projects/local-agent/roadmap_agent/: __init__.py  core.py
projects/local-agent/scripts/: ensure_lm_studio.sh  ensure_local_model.sh  report_token_savings.py  run_checks.bat  run_checks.sh  start_local_agent.bat  start_local_agent.sh
projects/local-agent/templates/: roadmap-progress.example.json
projects/local-agent/tests/: test_mcp.py  test_roadmap_agent.py
projects/p0-genai-starter-template/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
projects/p0-genai-starter-template/.github/: copilot-instructions.md
projects/p0-genai-starter-template/docker/: Dockerfile
projects/p0-genai-starter-template/src/: __init__.py  main.py  settings.py
projects/p0-genai-starter-template/src/integrations/: __init__.py  openai_client.py
projects/p0-genai-starter-template/src/models/: __init__.py  schemas.py
projects/p0-genai-starter-template/src/tools/: __init__.py  llm.py
projects/p0-genai-starter-template/src/utils/: __init__.py  constants.py  errors.py  logging_context.py
projects/p0-genai-starter-template/tests/: conftest.py  mocks.py
projects/p0-genai-starter-template/tests/unit/tools/: __init__.py  test_endpoints.py  test_llm.py
projects/p0-genai-starter-template/tests/unit/utils/: __init__.py  test_errors.py  test_settings.py
projects/p1-prompt-playground/: .env.example  Makefile  README.md  _probe_db.py  _read_cred.py  pyproject.toml
projects/p1-prompt-playground/src/: display.py  main.py  runner.py  settings.py  strategies.py
projects/p1-prompt-playground/tests/: mocks.py
projects/p1-prompt-playground/tests/unit/: test_strategies.py
projects/p2-summarizer/: .env.example  Makefile  README.md  pyproject.toml  sample.txt
projects/p2-summarizer/src/: display.py  main.py  prompts.py  runner.py  settings.py
projects/p2-summarizer/tests/: mocks.py
projects/p3-rewriter/: .env.example  Makefile  README.md  pyproject.toml  sample.txt
projects/p4-cli-chatbot/: .env.example  Makefile  README.md  pyproject.toml
projects/p5-fastapi-genai-service/: .env.example  Makefile  README.md  pyproject.toml
projects/p5-fastapi-genai-service/docker/: Dockerfile
projects/p5-fastapi-genai-service/src/: __init__.py  errors.py  llm.py  main.py  prompts.py  schemas.py  service.py  settings.py  token_usage.py
projects/p5-fastapi-genai-service/tests/: __init__.py  mocks.py
projects/p5-fastapi-genai-service/tests/unit/: __init__.py  test_endpoints.py  test_llm.py  test_prompts.py  test_schemas.py  test_service.py  test_token_usage.py
projects/p6-structured-data-extractor/: .env.example  Makefile  README.md  pyproject.toml
projects/p7-resume-vs-jd-analyzer/: .env.example  Makefile  README.md  pyproject.toml
projects/p7-resume-vs-jd-analyzer/examples/: job-description.txt  resume.txt
projects/p7-resume-vs-jd-analyzer/src/: __init__.py  errors.py  llm.py  main.py  prompts.py  schemas.py  scoring.py  service.py  settings.py  token_usage.py
projects/p7-resume-vs-jd-analyzer/tests/: __init__.py
projects/p7-resume-vs-jd-analyzer/tests/unit/: __init__.py  test_json_utils.py  test_llm.py  test_prompts.py  test_schemas.py  test_scoring.py  test_service.py
templates/: README.md  config.env.template  cursor-mcp.json.template
(+49 files in other folders)
