[project]
name = "prompt-playground"
version = "0.1.0"
description = "P1 — Prompt Playground: compare zero-shot, few-shot, system-role, and chain-of-thought on any task."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "truststore>=0.9.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["ruff>=0.4.0", "mypy>=1.10.0", "pytest>=8.0.0", "pytest-cov>=5.0.0"]

[tool.uv]
native-tls = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
