[project]
name = "fastapi-genai-service"
version = "0.1.0"
description = "P5 - FastAPI GenAI Service: summarize, rewrite, classify, extract, and track token economics."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "truststore>=0.9.1",
    "uvicorn[standard]>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["mypy>=1.10.0", "pytest>=8.0.0", "pytest-cov>=5.0.0", "ruff>=0.4.0"]

[tool.uv]
native-tls = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
