[project]
name = "resume-vs-jd-analyzer"
version = "0.1.0"
description = "P7 - Resume vs JD Analyzer: structured fit analysis with evidence and deterministic scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "openai>=1.35.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "truststore>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["mypy>=1.10.0", "pytest>=8.0.0", "ruff>=0.4.0"]

[tool.uv]
native-tls = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
